--- a/src/content.css
+++ b/src/content.css
@@ -72,7 +72,7 @@
 
 .hohser_actions_domain button svg {
   font-size: 1rem;
-  color: rgba(0,0,0,.54);
+  color: rgba(0, 0, 0, .54);
 }
 
 .hohser_actions_btns {
@@ -96,7 +96,9 @@
   opacity: 0;
 }
 
+
 /* Only for Google */
+
 .g {
   border-radius: 1px;
 }
@@ -128,14 +130,56 @@
   box-shadow: none!important;
 }
 
+
 /* Only for Startpage */
-.column--main__content > ol .search-result {
+
+.column--main__content>ol .search-result {
   padding: var(--spacing-default);
   margin: calc(0rem - var(--spacing-default));
   margin-bottom: calc(1.25rem - var(--spacing-default));
   border-radius: var(--ui-button-radius);
 }
 
-.hohser_actions_btns button [fill], .hohser_actions_domain button [fill] {
+.hohser_actions_btns button [fill],
+.hohser_actions_domain button [fill] {
   fill: none;
+}
+
+
+/* Super effects */
+
+.super1 {
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  padding: 3px;
+  border-radius: 5px;
+}
+
+.super2 {
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  padding: 3px;
+  border-radius: 5px;
+}
+
+.super3 {
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+  padding: 3px;
+  border-radius: 5px;
+}
+
+.super4 {
+  background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+  padding: 3px;
+  border-radius: 5px;
+}
+
+.super1 h3,
+.super2 h3,
+.super3 h3,
+.super4 h3,
+.super1 h2 a,
+.super2 h2 a,
+.super3 h2 a,
+.super4 h2 a {
+  font-weight: bold;
+  color: white !important;
 }
